--- a/week3/index.html
+++ b/week3/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>random website</title>
 </head>
 <body>
+<style>
+h1 {
+  color: blue;
+  font-family: garamond;
+  font-size: 300%;
+}
+p {
+  color: red;
+  font-family: comic sans ms;
+  font-size: 160%;
+}
+</style>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>welcome to my website</h1>
+<p>i like fate</p>
+<img src="https://c4.wallpaperflare.com/wallpaper/639/840/966/fate-series-fate-grand-order-oda-nobunaga-fate-grand-order-fgo-artwork-hd-wallpaper-preview.jpg">
 
 </body>
 </html>
