--- a/week3/index.html
+++ b/week3/index.html
@@ -18,7 +18,7 @@ p {
 </style>
 
 <h1>welcome to my website</h1>
-<p>i like fate</p>
+<p>meep morp zeep</p>
 <img src="https://c4.wallpaperflare.com/wallpaper/639/840/966/fate-series-fate-grand-order-oda-nobunaga-fate-grand-order-fgo-artwork-hd-wallpaper-preview.jpg">
 
 </body>
