tried the bg wallpaper

--- a/week3/index.html
+++ b/week3/index.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>random website</title>
-</head>
-<body>
 <style>
-h1 {
-  color: blue;
-  font-family: garamond;
-  font-size: 300%;
-}
-p {
-  color: red;
-  font-family: comic sans ms;
-  font-size: 160%;
+body {
+  background-image: url('artoria.jpg');
 }
 </style>
+</head>
+<body>
 
-<h1>welcome to my website</h1>
-<p>meep morp zeep</p>
-<img src="https://c4.wallpaperflare.com/wallpaper/639/840/966/fate-series-fate-grand-order-oda-nobunaga-fate-grand-order-fgo-artwork-hd-wallpaper-preview.jpg">
-<img src="artoria.jpg"
+<h2>Background Image</h2>
+
+<p>By default, the background image will repeat itself if it is smaller than the element where it is specified, in this case the body element.</p>
+
 </body>
 </html>
+
