--- a/week3/index.html
+++ b/week3/index.html
@@ -2,16 +2,23 @@
 <html>
 <head>
 <style>
-body {
-  background-image: url('artoria.jpg');
+h1 {
+  color: black;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+p  {
+  color: pink;
+  font-family: courier;
+  font-size: 160%;
 }
 </style>
 </head>
 <body>
 
-<h2>Background Image</h2>
-
-<p>By default, the background image will repeat itself if it is smaller than the element where it is specified, in this case the body element.</p>
+<h1>BLACK</h1>
+<p>PINK</p>
 
 </body>
 </html>
