did the html links of social media

--- a/week3/index.html
+++ b/week3/index.html
@@ -1,24 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-h1 {
-  color: black;
-  font-family: verdana;
-  font-size: 300%;
-
-}
-p  {
-  color: pink;
-  font-family: courier;
-  font-size: 160%;
-}
-</style>
-</head>
 <body>
 
-<h1>BLACK</h1>
-<p>PINK</p>
+<h1>SOCIAL MEDIA</h1>
+
+<p><a href="https://www.fb.com/">FACEBOOK</a></p>
+<p><a href="https://www.twitter.com/">TWITTER</a></p>
+<p><a href="https://www.instagram.com/">INSTAGRAM</a></p>
 
 </body>
 </html>
