--- a/week3/index.html
+++ b/week3/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title><---cool icon</title>
+  <link rel="icon" type="ico" href="favicon.ico">
+</head>
 <body>
 
-<h1>SOCIAL MEDIA</h1>
-
-<p><a href="https://www.fb.com/">FACEBOOK</a></p>
-<p><a href="https://www.twitter.com/">TWITTER</a></p>
-<p><a href="https://www.instagram.com/">INSTAGRAM</a></p>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
-
