--- a/week3/index.html
+++ b/week3/index.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><---cool icon</title>
-  <link rel="icon" type="ico" href="favicon.ico">
+<style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h2>FATE Table</h2>
+
+<table>
+  <tr>
+    <th>Servant</th>
+    <th>Master</th>
+    <th>Class</th>
+  </tr>
+  <tr>
+    <td>Gilgamesh</td>
+    <td>Tokiomi</td>
+    <td>Archer</td>
+  </tr>
+  <tr>
+    <td>Heracles</td>
+    <td>Illya</td>
+    <td>Berserker</td>
+  </tr>
+  <tr>
+    <td>Arthuria</td>
+    <td>Emiya</td>
+    <td>Saber</td>
+  </tr>
+  <tr>
+    <td>Mashu</td>
+    <td>Ritsuka</td>
+    <td>Shielder</td>
+  </tr>
+  <tr>
+    <td>Medusa</td>
+    <td>Sakura</td>
+    <td>Rider</td>
+  </tr>
+  <tr>
+    <td>Nero</td>
+    <td>Hakuno</td>
+    <td>Saber</td>
+  </tr>
+</table>
 
 </body>
 </html>
+
