--- a/week3/index.html
+++ b/week3/index.html
@@ -1,65 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
-</head>
 <body>
 
-<h2>FATE Table</h2>
+<h2>Class Description</h2>
 
-<table>
-  <tr>
-    <th>Servant</th>
-    <th>Master</th>
-    <th>Class</th>
-  </tr>
-  <tr>
-    <td>Gilgamesh</td>
-    <td>Tokiomi</td>
-    <td>Archer</td>
-  </tr>
-  <tr>
-    <td>Heracles</td>
-    <td>Illya</td>
-    <td>Berserker</td>
-  </tr>
-  <tr>
-    <td>Arthuria</td>
-    <td>Emiya</td>
-    <td>Saber</td>
-  </tr>
-  <tr>
-    <td>Mashu</td>
-    <td>Ritsuka</td>
-    <td>Shielder</td>
-  </tr>
-  <tr>
-    <td>Medusa</td>
-    <td>Sakura</td>
-    <td>Rider</td>
-  </tr>
-  <tr>
-    <td>Nero</td>
-    <td>Hakuno</td>
-    <td>Saber</td>
-  </tr>
-</table>
+<dl>
+  <dt>Saber</dt>
+  <dd>—Knight of the Sword and Heroic Spirit of the Sword. A jack-of-all-trades warrior. Agile and powerful in close quarters; extremely adept at swordsmanship.—</dd>
+  <dt>Lancer</dt>
+  <dd>—Knight of the Lance and Heroic Spirit of the Lance. Gifted with extreme agility and proficient in hit-and-run tactics as well as ranged melee weapons such as spears and lances.—</dd>
+  <dt>Archer</dt>
+  <dd>—Knight of the Bow and Heroic Spirit of the Bow. Excellent scouts that excel in possessing powerful Noble Phantasms. Masters of long ranged warfare.—</dd>
+</dl>
 
 </body>
 </html>
