--- a/week3/index.html
+++ b/week3/index.html
@@ -2,16 +2,18 @@
 <html>
 <body>
 
-<h2>Class Description</h2>
+<h2>Pick your character</h2>
+<p>The <strong>input type="checkbox"</strong> defines a checkbox:</p>
 
-<dl>
-  <dt>Saber</dt>
-  <dd>—Knight of the Sword and Heroic Spirit of the Sword. A jack-of-all-trades warrior. Agile and powerful in close quarters; extremely adept at swordsmanship.—</dd>
-  <dt>Lancer</dt>
-  <dd>—Knight of the Lance and Heroic Spirit of the Lance. Gifted with extreme agility and proficient in hit-and-run tactics as well as ranged melee weapons such as spears and lances.—</dd>
-  <dt>Archer</dt>
-  <dd>—Knight of the Bow and Heroic Spirit of the Bow. Excellent scouts that excel in possessing powerful Noble Phantasms. Masters of long ranged warfare.—</dd>
-</dl>
+<form action="/action_page.php">
+  <input type="checkbox" id="character1" name="character1" value="Bike">
+  <label for="character1"> Saber</label><br>
+  <input type="checkbox" id="character2" name="character2" value="Car">
+  <label for="character2"> Archer</label><br>
+  <input type="checkbox" id="character3" name="character3" value="Boat">
+  <label for="character3"> Lancer</label><br><br>
+  <input type="submit" value="Submit">
+</form> 
 
 </body>
 </html>
