--- a/week3/index.html
+++ b/week3/index.html
@@ -2,18 +2,13 @@
 <html>
 <body>
 
-<h2>Pick your character</h2>
-<p>The <strong>input type="checkbox"</strong> defines a checkbox:</p>
+<h2>Website within a website :O</h2>
 
-<form action="/action_page.php">
-  <input type="checkbox" id="character1" name="character1" value="Bike">
-  <label for="character1"> Saber</label><br>
-  <input type="checkbox" id="character2" name="character2" value="Car">
-  <label for="character2"> Archer</label><br>
-  <input type="checkbox" id="character3" name="character3" value="Boat">
-  <label for="character3"> Lancer</label><br><br>
-  <input type="submit" value="Submit">
-</form> 
+<iframe src="demo_iframe.htm" name="iframe_a" height="300px" width="100%" title="Iframe Example"></iframe>
+
+<p><a href="https://fategrandorder.fandom.com/wiki/Fate/Grand_Order_Wikia" target="iframe_a">FGO Wiki</a></p>
+
+<p>This is where I go when I want to know something about my favorite game</p>
 
 </body>
 </html>
