tried adding youtube, cant test bc school pc has no yt

--- a/week3/index.html
+++ b/week3/index.html
@@ -2,13 +2,8 @@
 <html>
 <body>
 
-<h2>Website within a website :O</h2>
-
-<iframe src="demo_iframe.htm" name="iframe_a" height="300px" width="100%" title="Iframe Example"></iframe>
-
-<p><a href="https://fategrandorder.fandom.com/wiki/Fate/Grand_Order_Wikia" target="iframe_a">FGO Wiki</a></p>
-
-<p>This is where I go when I want to know something about my favorite game</p>
+<iframe width="420" height="345" src="https://youtu.be/ZRtdQ81jPUQ">
+</iframe>
 
 </body>
 </html>
