--- a/week3/index.html
+++ b/week3/index.html
@@ -2,8 +2,28 @@
 <html>
 <body>
 
-<iframe width="420" height="345" src="https://youtu.be/ZRtdQ81jPUQ">
-</iframe>
+<p>Click to be stalked. jk</p>
+
+<button onclick="getLocation()">Try It</button>
+
+<p id="demo"></p>
+
+<script>
+var x = document.getElementById("demo");
+
+function getLocation() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+  } else { 
+    x.innerHTML = "Geolocation is not supported by this browser.";
+  }
+}
+
+function showPosition(position) {
+  x.innerHTML = "Latitude: " + position.coords.latitude + 
+  "<br>Longitude: " + position.coords.longitude;
+}
+</script>
 
 </body>
 </html>
