added photo as bg

--- a/week3/index.html
+++ b/week3/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="index.css">
+<style>
+body {
+  background-image: url("citybg.jpg");
+}
+</style>
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-reeeeeeee
+<h1>Hello World!</h1>
+
+<p>This page has an image as the background!</p>
+
 </body>
 </html>
 
