--- a/week3/index.html
+++ b/week3/index.html
@@ -2,35 +2,17 @@
 <html>
 <head>
 <style>
-p.dotted {border-style: dotted;}
-p.dashed {border-style: dashed;}
-p.solid {border-style: solid;}
-p.double {border-style: double;}
-p.groove {border-style: groove;}
-p.ridge {border-style: ridge;}
-p.inset {border-style: inset;}
-p.outset {border-style: outset;}
-p.none {border-style: none;}
-p.hidden {border-style: hidden;}
-p.mix {border-style: dotted dashed solid double;}
+div {
+  margin: 70px;
+  border: 1px solid #4CAF50;
+}
 </style>
 </head>
 <body>
 
-<h2>The border-style Property</h2>
-<p>This property specifies what kind of border to display:</p>
+<h2>CSS Margins</h2>
 
-<p class="dotted">A dotted border.</p>
-<p class="dashed">A dashed border.</p>
-<p class="solid">A solid border.</p>
-<p class="double">A double border.</p>
-<p class="groove">A groove border.</p>
-<p class="ridge">A ridge border.</p>
-<p class="inset">An inset border.</p>
-<p class="outset">An outset border.</p>
-<p class="none">No border.</p>
-<p class="hidden">A hidden border.</p>
-<p class="mix">A mixed border.</p>
+<div>This element has a margin of 70px.</div>
 
 </body>
 </html>
