--- a/week3/index.html
+++ b/week3/index.html
@@ -3,16 +3,15 @@
 <head>
 <style>
 div {
-  margin: 70px;
+  padding: 70px;
   border: 1px solid #4CAF50;
 }
 </style>
 </head>
 <body>
 
-<h2>CSS Margins</h2>
-
-<div>This element has a margin of 70px.</div>
+<h2>CSS Padding</h2>
+<div>This element has a padding of 70px.</div>
 
 </body>
 </html>
