--- a/week3/index.html
+++ b/week3/index.html
@@ -3,15 +3,17 @@
 <head>
 <style>
 div {
-  padding: 70px;
+  height: 50px;
+  width: 100%;
   border: 1px solid #4CAF50;
 }
 </style>
 </head>
 <body>
 
-<h2>CSS Padding</h2>
-<div>This element has a padding of 70px.</div>
+<h2>CSS height and width properties</h2>
+
+<div>This div element has a height of 50 pixels and a width of 100%.</div>
 
 </body>
 </html>
